--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.1.0
-pandas==2.2.3
-twilio==9.4.5
-matplotlib==3.10.0
-scikit-learn==1.6.1
-numpy==2.2.2
-gunicorn==25.0.1
+Flask==3.0.2
+pandas==2.2.1
+twilio==9.0.2
+matplotlib==3.8.3
+scikit-learn==1.4.1.post1
+numpy==1.26.4
+gunicorn==21.2.0  # Versão compatível com Python 3.11
